<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".InputActivity" >
    
    
    <TextView 
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/ia_sleep"/>
    
    <LinearLayout
        android:id="@+id/container1"
        android:layout_below="@id/title"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">       
        <Button
            android:id="@+id/ia_sleep_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ia_sleep_btn"
            android:gravity="center"/>
        <Button
            android:id="@+id/ia_wake_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ia_wake_btn"
            android:gravity="center"/>
        <Button
            android:id="@+id/ia_up_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ia_up_btn"
            android:gravity="center"/>
    </LinearLayout>
    
</RelativeLayout>