<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/LD_rl_maincontainer"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#1e1e1e"
              android:padding="10dp">

        <TextView
            android:id="@+id/LD_tv_datecreated_title"        
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ld_tv_datecreated_title"/>
        <TextView
            android:id="@+id/LD_tv_datecreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/LD_tv_datecreated_title"/>
         <TextView
            android:id="@+id/LD_tv_datemodified_title"        
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ld_tv_datemodified_title"
            android:layout_below="@id/LD_tv_datecreated_title"/>
        <TextView
            android:id="@+id/LD_tv_datemodified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/LD_tv_datemodified_title"/>
        <TextView
            android:id="@+id/LD_tv_dateviewed_title"        
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ld_tv_dateviewed_title"
            android:layout_below="@id/LD_tv_datemodified_title"/>
        <TextView
            android:id="@+id/LD_tv_dateviewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/LD_tv_dateviewed_title"/>
  		<View
  		    android:id="@+id/LD_v_div1"
  		    android:layout_below="@id/LD_tv_dateviewed_title"
  		    android:layout_width="fill_parent"
  		    android:layout_height="5px"
  		    android:background="#AA3333"/>
  		<TextView
            android:id="@+id/LD_tv_data1_title"        
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ld_tv_data1_title"
            android:layout_below="@id/LD_v_div1"/>
        <EditText
            android:id="@+id/LD_et_data1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/LD_tv_data1_title"
            android:layout_alignBaseline="@id/LD_tv_data1_title"/>
        <TextView
            android:id="@+id/LD_tv_data2_title"        
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ld_tv_data2_title"
            android:layout_below="@id/LD_tv_data1_title"/>
        <EditText
            android:id="@+id/LD_et_data2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/LD_tv_data2_title"
            android:layout_alignBaseline="@id/LD_tv_data2_title"/>
        <TextView
            android:id="@+id/LD_tv_data3_title"        
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ld_tv_data3_title"
            android:layout_below="@id/LD_tv_data2_title"/>
        <EditText
            android:id="@+id/LD_et_data3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/LD_tv_data3_title"
            android:layout_alignBaseline="@id/LD_tv_data3_title"/>
        <TextView
            android:id="@+id/LD_tv_data4_title"        
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ld_tv_data4_title"
            android:layout_below="@id/LD_tv_data3_title"/>
        <EditText
            android:id="@+id/LD_et_data4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/LD_tv_data4_title"
            android:layout_alignBaseline="@id/LD_tv_data4_title"/>
        <TextView
            android:id="@+id/LD_tv_data5_title"        
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ld_tv_data5_title"
            android:layout_below="@id/LD_tv_data4_title"/>
        <EditText
            android:id="@+id/LD_et_data5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/LD_tv_data5_title"
            android:layout_alignBaseline="@id/LD_tv_data5_title"/>
  	
    
    
    <TextView
        android:text="T"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</RelativeLayout>
   