<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".TableActivity" >
    
    <TextView
        android:id="@+id/ta_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:text="@string/ta_title"/>
<!-- Table Header Container -->
    <LinearLayout 
        android:id="@+id/ta_container"
        android:layout_below="@id/ta_title"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ta_dateheader"
            android:layout_weight="2"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ta_dataheader"
            android:layout_weight="1"/>
    </LinearLayout>
    <ListView 
        android:id="@+id/ta_listview"
        android:layout_below="@id/ta_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    
    
</RelativeLayout>   