<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    tools:context=".ListDataActivity" 
    android:background="#1e1e1e">
    
    <TextView 
        android:id="@+id/lda_tv_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center_vertical"
        android:layout_margin="10dp"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"/>
    <!-- Table Heading -->
    <LinearLayout 
        android:id="@+id/lda_ll_title_container"
        android:layout_below="@id/lda_tv_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lda_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_gen"
            android:visibility="visible"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/lda_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_gen"
            android:visibility="visible"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/lda_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_gen"
            android:visibility="visible"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/lda_tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_gen"
            android:visibility="visible"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/lda_tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_gen"
            android:visibility="visible"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/lda_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_date"
            android:visibility="gone"
            android:layout_weight="1"/>
    </LinearLayout>
    <ListView 
        android:id="@+id/lda_lv"
        android:layout_below="@id/lda_ll_title_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>    
    
    
</RelativeLayout>